--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"redux": "^4.2.1",
+		"redux-persist": "^6.0.0",
 		"vite-plugin-svgr": "^2.4.0"
 	},
 	"devDependencies": {
