--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.5",
 		"redux": "^4.2.1",
+		"redux-devtools-extension": "^2.13.9",
 		"redux-persist": "^6.0.0",
+		"redux-thunk": "^2.4.2",
 		"vite-plugin-svgr": "^2.4.0"
 	},
 	"devDependencies": {
